WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40346
Fix build breakage from 38145
https://bugs.webkit.org/show_bug.cgi?id=40346
Summary
Fix build breakage from 38145
Kenneth Russell
Reported
2010-06-08 19:01:42 PDT
The fix for
bug 38145
broke the Chromium Win build because Microsoft's cmath doesn't define log2. Suggested fix by zmo is to change log2(x) to log(x) / log(2). Built and ran WebGL layout tests in Safari on Mac OS X.
Attachments
Add attachment
proposed patch, testcase, etc.
Kenneth Russell
Comment 1
2010-06-08 19:11:50 PDT
Committed
r60876
: <
http://trac.webkit.org/changeset/60876
>
Roland Steiner
Comment 2
2010-06-08 22:38:58 PDT
The fix didn't catch - now the log function calls are ambiguous between float, double or long double versions. I added a 2nd quick fix in
r60881
- adding explicit casts to double and double constants - which seems to have done the trick, at least as far as compilation goes (see
http://trac.webkit.org/changeset/60881
)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug